--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 * {
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-  background-color: lightgrey;
+  background-color: #006992;
 }
 
 .container {
@@ -16,10 +17,10 @@ body {
 
 .card {
   margin: 10px;
-  background-color: lightblue;
-  border: 5px solid blue;
+  background-color: #ECA400;
+  border: 5px solid #102F55;
   border-radius: 10px;
-  padding: 20px;
+  padding: 10px;
 }
 
 .left {
@@ -30,14 +31,24 @@ body {
 
 .left img {
   float: left;
-  width: 250px;
+  width: 230px;
   margin-bottom: 20px;
+  border-radius: 10px;
+  margin: 0 20px 10px;
 }
 
 .left h4 {
   text-align: center;
+  color: #EAF8BF;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .right h4 {
  margin: 5px;
+
 }
